# axyn

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE.txt  README.md  flake.nix  nixos.nix  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: beautify.yml  commit.yml  main.yml  release.yml
axyn/: __main__.py  analyse.py  channel.py  chat.py  chatbot.py  client.py  consent.py  database.py  datastore.py  filters.py  handle.py  history.py  index.py  interval.py  introduction.py  main.py  models.py  preprocessor.py  privacy.py  react.py  status.py  train.py  types.py
axyn/chatbot/: __init__.py  caps.py  models.py  ngtinit.py  nlploader.py  pairs.py  response.py  train.py  vector.py
axyn/handlers/: __init__.py  consent.py  reply.py  respond.py  store.py
axyn/managers/: __init__.py  consent.py  database.py  index.py  scan.py
axyn/message_handlers/: __init__.py  consent.py  learn.py  react.py  reply.py  store.py
axyn/reaction_handlers/: __init__.py  learn.py
axyn/settings/: __init__.py  cog.py  context.py  scopes.py  settings.py
axyn/tests/: test_consent.py  test_database.py  test_filters.py  test_history.py  test_preprocessor.py
axyn/tests/managers/: test_consent.py  test_database.py
axyn/tests/ui/: test_consent.py
axyn/ui/: consent.py
chatterbot/: caps.py  chat.py  datastore.py  help.py  main.py  train.py
typings/ngtpy/: __init__.pyi
